--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script src = "javascript.js" defer></script>
     </head>
     <body>
-        
+        <div id = "container">
+            
+        </div>    
     </body>
 </html>
