Implement user grid size selection (max 100) Need to implement auto re-sizing of divs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <script src = "javascript.js" defer></script>
     </head>
     <body>
+        <div id = "head">
+            <button id="numButton" class = "numButton">Click me!!</button>
+        </div>
         <div id = "container">
-            
         </div>    
     </body>
 </html>
