Add UI & fix scaling issue Need to make the website properly reset when a new number is prompted.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
         <script src = "javascript.js" defer></script>
     </head>
     <body>
-        <div id = "head">
-            <button id="numButton" class = "numButton">Click me!!</button>
-        </div>
-        <div id = "container">
-        </div>    
+        <div class = 'contents'>
+            <div class = "head">
+                <h1 class = 'title'>
+                    Welcome to Billy's Etch-a-sketch, V1!
+                </h1>
+                <button id="numButton" class = "numButton">
+                    Click me!!
+                </button>
+            </div>
+            <div id = "container" class = "container">
+            </div>  
+        </div>  
     </body>
 </html>
