Fix input method and add color buttons Need to add the actual colors and pretty up the page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
                 <h1 class = 'title'>
                     Welcome to Billy's Etch-a-sketch, V1!
                 </h1>
-                <button id="numButton" class = "numButton">
-                    Click me!!
-                </button>
+                <div class="info">
+                    This is a work in progress, so some features may not work correctly!
+                </div>
+                <div class = "buttonContainer">
+                    <button id="numButton" class = "numButton">
+                        Click me to start !!
+                    </button>
+                    <div class = "colorButtons">
+                        <button id="colorButton" class = "redButton">
+                            Red
+                        </button>
+                        <button id="colorButton" class = "blueButton">
+                            Blue
+                        </button> 
+                        <button id="colorButton" class = "greenButton">
+                            Green
+                        </button>
+                    </div>
+                </div>
             </div>
             <div id = "container" class = "container">
             </div>  
