Have site cleaned up Going to make a branch to try and implement color changing

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
                         Click me to start !!
                     </button>
                     <div class = "colorButtons">
-                        <button id="colorButton" class = "redButton">
+                        <button id = "blackButton" class = "blackButton">
+                            Black
+                        </button>
+
+                        <button id="redButton" class = "redButton">
                             Red
                         </button>
-                        <button id="colorButton" class = "blueButton">
+                        <button id="blueButton" class = "blueButton">
                             Blue
                         </button> 
-                        <button id="colorButton" class = "greenButton">
+                        <button id="greenButton" class = "greenButton">
                             Green
                         </button>
                     </div>
