Add color! Nice. Very nice.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                         Click me to start !!
                     </button>
                     <div class = "colorButtons">
-                        <button id = "blackButton" class = "blackButton">
+                        <button onClick='choose("black")' id = "blackButton" class = "blackButton">
                             Black
                         </button>
 
-                        <button id="redButton" class = "redButton">
+                        <button onClick= 'choose("red")'id="redButton" class = "redButton">
                             Red
                         </button>
-                        <button id="blueButton" class = "blueButton">
+                        <button onClick='choose("blue")'id="blueButton" class = "blueButton">
                             Blue
                         </button> 
-                        <button id="greenButton" class = "greenButton">
+                        <button onClick='choose("green")' id="greenButton" class = "greenButton">
                             Green
                         </button>
                     </div>
