Clean up UI I think this is a good stopping point, for now.

--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@
                 <h1 class = 'title'>
                     Welcome to Billy's Etch-a-sketch, V1!
                 </h1>
-                <div class="info">
-                    This is a work in progress, so some features may not work correctly!
-                </div>
                 <div class = "buttonContainer">
                     <button id="numButton" class = "numButton">
-                        Click me to start !!
+                        Choose Grid Size
                     </button>
                     <div class = "colorButtons">
                         <button onClick='choose("black")' id = "blackButton" class = "blackButton">
                             Black
                         </button>
-
                         <button onClick= 'choose("red")'id="redButton" class = "redButton">
                             Red
                         </button>
