--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <body>
         <div class = 'contents'>
             <div class = "head">
-                <h1 class = 'title'>
+                <div class = 'title'>
+                <h1>
                     Welcome to Billy's Etch-a-sketch, V1!
                 </h1>
+                <h3>
+                    For best experience, use on computer!
+                </h3>
+                </div>
                 <div class = "buttonContainer">
                         <button id="numButton" class = "numButton">
                             Resize Grid
